--- a/requirements.txt
+++ b/requirements.txt
@@ -126,7 +126,7 @@ protobuf==3.17.2
 psycopg2==2.9.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-PyAudio @ file:///C:/Users/as660/pipwin/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
+#PyAudio @ file:///C:/Users/as660/pipwin/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
 PyAutoGUI==0.9.53
 pycparser==2.20
 pycryptodome==3.10.1
