--- a/requirements.txt
+++ b/requirements.txt
@@ -153,7 +153,7 @@ pyttsx3==2.90
 PyTweening==1.0.3
 pytz==2020.5
 PyWavelets==1.1.1
-pywin32==227
+#pywin32==227
 pywinpty==1.1.1
 PyYAML==5.4.1
 pyzmq==22.1.0
@@ -162,7 +162,7 @@ QtPy==1.9.0
 regex==2021.4.4
 reportlab==3.5.68
 requests==2.25.1
-requests-oauthlib==1.3.0
+#requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.2
 s3transfer==0.5.0
@@ -189,18 +189,14 @@ tensorflow-estimator==2.5.0
 termcolor==1.1.0
 terminado==0.10.0
 testpath==0.5.0
-tf-estimator-nightly==2.5.0.dev2021032601
-threadpoolctl==2.1.0
-tifffile==2021.7.2
-tkintertable==1.3.3
+#tf-estimator-nightly==2.5.0.dev2021032601
+#threadpoolctl==2.1.0
+#tifffile==2021.7.2
+#tkintertable==1.3.3
 tokenizers==0.10.3
-torch==1.9.0
-tornado==6.1
-tqdm==4.61.0
 traitlets==5.0.5
 transformers==4.9.1
 tweepy==3.10.0
-typing-extensions==3.7.4.3
 tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.5
@@ -209,13 +205,13 @@ validator==0.7.0
 virtualenv==20.3.1
 virtualenvwrapper-win==1.2.6
 waitress==2.0.0
-Wand==0.6.6
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-whitenoise==5.2.0
-widgetsnbextension==3.5.1
-wikipedia==1.4.0
-wrapt==1.12.1
-xlrd==2.0.1
-XlsxWriter==1.4.3
+#Wand==0.6.6
+#wcwidth==0.2.5
+#webencodings==0.5.1
+#Werkzeug==2.0.1
+#whitenoise==5.2.0
+#widgetsnbextension==3.5.1
+#wikipedia==1.4.0
+#wrapt==1.12.1
+#xlrd==2.0.1
+#XlsxWriter==1.4.3
