--- a/requirements.txt
+++ b/requirements.txt
@@ -155,4 +155,63 @@ pytz==2020.5
 PyWavelets==1.1.1
 #pywin32==227
 #pywinpty==1.1.1
-
+PyYAML==5.4.1
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
+regex==2021.4.4
+reportlab==3.5.68
+requests==2.25.1
+#requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.7.2
+s3transfer==0.5.0
+sacremoses==0.0.45
+scikit-image==0.18.2
+scikit-learn==0.24.2
+scipy==1.6.3
+seaborn==0.11.1
+Send2Trash==1.5.0
+six==1.16.0
+sortedcontainers==2.4.0
+soupsieve==2.2.1
+SpeechRecognition==3.8.1
+sqlparse==0.4.1
+stdlib-list==0.8.0
+tabula==1.0.5
+tabula-py==2.2.0
+tb-nightly==2.6.0a20210615
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
+terminado==0.10.0
+testpath==0.5.0
+#tf-estimator-nightly==2.5.0.dev2021032601
+#threadpoolctl==2.1.0
+#tifffile==2021.7.2
+#tkintertable==1.3.3
+tokenizers==0.10.3
+traitlets==5.0.5
+transformers==4.9.1
+tweepy==3.10.0
+tzlocal==2.1
+uritemplate==3.0.1
+urllib3==1.26.5
+utils==1.0.1
+validator==0.7.0
+virtualenv==20.3.1
+virtualenvwrapper-win==1.2.6
+waitress==2.0.0
+#Wand==0.6.6
+#wcwidth==0.2.5
+#webencodings==0.5.1
+#Werkzeug==2.0.1
+#whitenoise==5.2.0
+#widgetsnbextension==3.5.1
+#wikipedia==1.4.0
+#wrapt==1.12.1
+#xlrd==2.0.1
+#XlsxWriter==1.4.3
