--- a/requirements.txt
+++ b/requirements.txt
@@ -184,7 +184,7 @@ tb-nightly==2.6.0a20210615
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.0.0
+#tensorflow==2.0.0
 #tensorflow-estimator==2.5.0
 #termcolor==1.1.0
 terminado==0.10.0
