--- a/requirements.txt
+++ b/requirements.txt
@@ -184,7 +184,7 @@ tb-nightly==2.6.0a20210615
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-#tensorflow==2.0.0
+tensorflow==2.8.0
 #tensorflow-estimator==2.5.0
 #termcolor==1.1.0
 terminado==0.10.0
@@ -205,13 +205,13 @@ validator==0.7.0
 virtualenv==20.3.1
 virtualenvwrapper-win==1.2.6
 waitress==2.0.0
-#Wand==0.6.6
-#wcwidth==0.2.5
+Wand==0.6.6
+wcwidth==0.2.5
 #webencodings==0.5.1
-#Werkzeug==2.0.1
-#whitenoise==5.2.0
-#widgetsnbextension==3.5.1
-#wikipedia==1.4.0
-#wrapt==1.12.1
-#xlrd==2.0.1
-#XlsxWriter==1.4.3
+Werkzeug==2.0.1
+whitenoise==5.2.0
+widgetsnbextension==3.5.1
+wikipedia==1.4.0
+wrapt==1.12.1
+xlrd==2.0.1
+XlsxWriter==1.4.3
