--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.34.1
 gunicorn==20.1.0
-h5py==2.8.0
+h5py==3.1.0
 heroku==0.1.4
 huggingface-hub==0.0.12
 idna==2.10
@@ -103,7 +103,7 @@ nltk==3.6.2
 notebook==6.4.0
 numpy==1.21.1
 oauthlib==3.1.1
-opencv-python==4.5.5.64
+opencv-python==4.5.2.54
 openpyxl==3.0.7
 opt-einsum==3.3.0
 packaging==20.9
@@ -138,7 +138,7 @@ PyMsgBox==1.0.9
 PyMySQL==1.0.2
 pyparsing==2.4.7
 pyperclip==1.8.2
-#pypiwin32==303
+pypiwin32==223
 PyPrind==2.11.3
 PyRect==0.1.4
 pyrsistent==0.17.3
@@ -153,8 +153,8 @@ pyttsx3==2.90
 PyTweening==1.0.3
 pytz==2020.5
 PyWavelets==1.1.1
-#pywin32==227
-#pywinpty==1.1.1
+pywin32==227
+pywinpty==1.1.1
 PyYAML==5.4.1
 pyzmq==22.1.0
 qtconsole==5.1.0
@@ -162,20 +162,20 @@ QtPy==1.9.0
 regex==2021.4.4
 reportlab==3.5.68
 requests==2.25.1
-#requests-oauthlib==1.3.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.2
 s3transfer==0.5.0
 sacremoses==0.0.45
 scikit-image==0.18.2
 scikit-learn==0.24.2
-#scipy==0.9.3
+scipy==1.6.3
 seaborn==0.11.1
 Send2Trash==1.5.0
 six==1.16.0
 sortedcontainers==2.4.0
-#soupsieve==2.2.1
-#SpeechRecognition==3.8.1
+soupsieve==2.2.1
+SpeechRecognition==3.8.1
 sqlparse==0.4.1
 stdlib-list==0.8.0
 tabula==1.0.5
@@ -184,20 +184,24 @@ tb-nightly==2.6.0a20210615
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.8.0
-#tensorflow-estimator==2.5.0
-#termcolor==1.1.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
 terminado==0.10.0
 testpath==0.5.0
-#tf-estimator-nightly==2.5.0.dev2021032601
-#threadpoolctl==2.1.0
-#tifffile==2021.7.2
-#tkintertable==1.3.3
+tf-estimator-nightly==2.5.0.dev2021032601
+threadpoolctl==2.1.0
+tifffile==2021.7.2
+tkintertable==1.3.3
 tokenizers==0.10.3
+torch==1.9.0
+tornado==6.1
+tqdm==4.61.0
 traitlets==5.0.5
 transformers==4.9.1
-#tweepy==3.10.0
-#tzlocal==2.1
+tweepy==3.10.0
+typing-extensions==3.7.4.3
+tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.5
 utils==1.0.1
@@ -207,7 +211,7 @@ virtualenvwrapper-win==1.2.6
 waitress==2.0.0
 Wand==0.6.6
 wcwidth==0.2.5
-#webencodings==0.5.1
+webencodings==0.5.1
 Werkzeug==2.0.1
 whitenoise==5.2.0
 widgetsnbextension==3.5.1
