--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,32 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@ashutoshlovpry 
+ashutoshlovpry
+/
+email-form
+Public
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+email-form/requirements.txt
+@ashutoshlovpry
+ashutoshlovpry Update requirements.txt
+Latest commit a521976 1 hour ago
+ History
+ 1 contributor
+217 lines (217 sloc)  4.14 KB
+   
 absl-py==0.12.0
 appdirs==1.4.4
 argon2-cffi==20.1.0
@@ -58,7 +87,7 @@ google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.34.1
 gunicorn==20.1.0
-h5py==3.1.0
+h5py==2.8.0
 heroku==0.1.4
 huggingface-hub==0.0.12
 idna==2.10
@@ -103,7 +132,7 @@ nltk==3.6.2
 notebook==6.4.0
 numpy==1.21.1
 oauthlib==3.1.1
-opencv-python==4.5.2.54
+opencv-python==4.5.5.64
 openpyxl==3.0.7
 opt-einsum==3.3.0
 packaging==20.9
@@ -138,7 +167,7 @@ PyMsgBox==1.0.9
 PyMySQL==1.0.2
 pyparsing==2.4.7
 pyperclip==1.8.2
-pypiwin32==223
+#pypiwin32==303
 PyPrind==2.11.3
 PyRect==0.1.4
 pyrsistent==0.17.3
@@ -153,8 +182,8 @@ pyttsx3==2.90
 PyTweening==1.0.3
 pytz==2020.5
 PyWavelets==1.1.1
-pywin32==227
-pywinpty==1.1.1
+#pywin32==227
+#pywinpty==1.1.1
 PyYAML==5.4.1
 pyzmq==22.1.0
 qtconsole==5.1.0
@@ -162,20 +191,20 @@ QtPy==1.9.0
 regex==2021.4.4
 reportlab==3.5.68
 requests==2.25.1
-requests-oauthlib==1.3.0
+#requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.2
 s3transfer==0.5.0
 sacremoses==0.0.45
 scikit-image==0.18.2
 scikit-learn==0.24.2
-scipy==1.6.3
+#scipy==0.9.3
 seaborn==0.11.1
 Send2Trash==1.5.0
 six==1.16.0
 sortedcontainers==2.4.0
-soupsieve==2.2.1
-SpeechRecognition==3.8.1
+#soupsieve==2.2.1
+#SpeechRecognition==3.8.1
 sqlparse==0.4.1
 stdlib-list==0.8.0
 tabula==1.0.5
@@ -184,8 +213,8 @@ tb-nightly==2.6.0a20210615
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
+tensorflow==2.8.0
+#tensorflow-estimator==2.5.0
 termcolor==1.1.0
 terminado==0.10.0
 testpath==0.5.0
@@ -211,7 +240,7 @@ virtualenvwrapper-win==1.2.6
 waitress==2.0.0
 Wand==0.6.6
 wcwidth==0.2.5
-webencodings==0.5.1
+#webencodings==0.5.1
 Werkzeug==2.0.1
 whitenoise==5.2.0
 widgetsnbextension==3.5.1
