--- a/requirements.txt
+++ b/requirements.txt
@@ -195,7 +195,7 @@ threadpoolctl==2.1.0
 tifffile==2021.7.2
 tkintertable==1.3.3
 tokenizers==0.10.3
-#torch==1.10.2
+torch==0.4.1 
 tornado==6.1
 tqdm==4.61.0
 traitlets==5.0.5
